<resources>
    <string name="app_name">LOTTERIA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cloud_storage">Cloud Storage</string>
    <string name="account">Account</string>
    <string name="sync">Sync</string>
    <string name="recommend">Recommend</string>
    <string name="smart_detect">Smart Detect</string>
    <string name="favorite">Favorite</string>
    <string name="import_images">Import Images</string>
    <string name="recent_images">Recent Images</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_page">Home</string>
    <string name="list_images_page">Images</string>
    <string name="setting_page">Setting</string>
    <string name="back">Back</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="logout">Logout</string>
    <string name="log_in">Log In</string>
    <string name="login_instruction">or use your email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Not Registered Yet?</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="feedback_description">Yuk beri feedback kami…</string>
    <string name="submit">Submit</string>
    <string name="not_working_feature">Sorry, this feature still not working</string>
    <string name="filter_type">Filter Gambar</string>
    <string name="cloud_storage_value">31,95MB/500,00MB</string>
    <string name="title">Give your image a title</string>
    <string name="tag">Maybe you want to add a tag?</string>
    <string name="save">Save</string>
    <string name="unknown">UNKNOWN</string>
</resources>