<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_setting"
    tools:context=".ui.home.HomePageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_search"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bg_searchview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:cardCornerRadius="0dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/smart_detect_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="75dp"
            android:scaleType="fitXY"
            android:src="@drawable/detect"
            app:layout_constraintBottom_toTopOf="@+id/cardView_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_search"
            app:layout_constraintVertical_bias="0.233" />

        <TextView
            android:id="@+id/smart_detect_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart_detect"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/smart_detect_icon"
            app:layout_constraintStart_toStartOf="@+id/smart_detect_icon"
            app:layout_constraintTop_toBottomOf="@+id/smart_detect_icon" />

        <ImageView
            android:id="@+id/favorite_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="70dp"
            android:scaleType="fitXY"
            android:src="@drawable/favorite"
            app:layout_constraintBottom_toTopOf="@+id/cardView_list"
            app:layout_constraintStart_toEndOf="@+id/smart_detect_icon"
            app:layout_constraintTop_toBottomOf="@+id/cardView_search"
            app:layout_constraintVertical_bias="0.233" />

        <TextView
            android:id="@+id/favorite_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/favorite_icon"
            app:layout_constraintStart_toStartOf="@+id/favorite_icon"
            app:layout_constraintTop_toBottomOf="@+id/favorite_icon" />

        <ImageView
            android:id="@+id/import_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="75dp"
            android:scaleType="fitXY"
            android:src="@drawable/import_file"
            app:layout_constraintBottom_toTopOf="@+id/cardView_list"
            app:layout_constraintStart_toEndOf="@+id/favorite_icon"
            app:layout_constraintTop_toBottomOf="@+id/cardView_search"
            app:layout_constraintVertical_bias="0.233" />

        <TextView
            android:id="@+id/import_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_images"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/import_icon"
            app:layout_constraintStart_toStartOf="@+id/import_icon"
            app:layout_constraintTop_toBottomOf="@+id/import_icon" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="180dp"
            android:background="@color/white"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_search">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/recent_images_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/recent_images"
                    android:textColor="@color/black"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recent_gambar_bakteri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:paddingBottom="120dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recent_images_text"
                    tools:listitem="@layout/item_row_image" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/button_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="90dp"
                    android:backgroundTint="@color/warna_icon"
                    android:src="@drawable/ic_baseline_camera_alt_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:cardCornerRadius="0dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>